week3/manifests/ingress-examplecom-no-tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /app1
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
      - path: /app2
        pathType: Prefix
        backend:
          service:
            name: nginx2
            port:
              number: 80
