week3/manifests/ingress-host-minimal.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-ingress
spec:
  rules:
  - host: shop.mystore.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: shop-service
            port:
              number: 80
  - host: checkout.mystore.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: checkout-service
            port:
              number: 80
